# przepisnik

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: app.cpp  app.hpp  main.cpp  textConstants.hpp  types.hpp  widgets.cpp  widgets.hpp
src/book/: book.cpp  book.hpp
src/catalog/: catalog.cpp  catalog.hpp  catalogWidgets.cpp
src/fridge/: fridge.cpp  fridge.hpp  fridgeWidgets.cpp
